# C3M

./: .chapman_R2.py.swp  .gitignore  .gitmodules  .pre-commit-config.yaml  BiersonZhang2020new.yaml  BoxChemGen.py  CMakeLists.txt  License.md  NetGenKINETICS.py  NetGenVULCAN.py  README  README.md  VenusAB23.yaml  Venus_1000.nc  \  add.patch  build.sh  chapman.py  chemgraph.py  compile.sh  config.py  configure.hpp.in  diff.patch  example.py  initiate_chem_0dim.py  initiate_chem_1dim.py  integ.py  ncmaker.py  requirements.txt  rxnpath.dot  vulcan.py  vulcan.yaml  vulcan_Tsai2017.py
chemkin/: pyvenv.cfg
cmake/: compilers.cmake  setup_compiler_flags.cmake  setup_configure.cmake  yamlpp.cmake
cmake/examples/: ZeroD.cmake
cmake/macros/: macro_setup_problem.cmake  macro_setup_test.cmake
cmake/modules/: FindCantera.cmake
data/: bierson2020.txt  chapmantest.txt  oschisniok2021.txt  scheme.inp  vulcan2017.txt  zhang2012.txt
data/KINETICS/: KINETICS7_Bhattacharya.nc
data/KINETICS7/: CROSS_BRO=BR+O_LORES1.DAT~  CROSS_C2CL2F4=2CL+4F+PROD_LORES1.DAT~  CROSS_C2CL3F3=3CL+3F+PROD_LORES1.DAT~  CROSS_CF3CCL3=3CL+3F+2CO2_LORES1.DAT~  CROSS_CF3CFCL2=2CL+4F+2CO2_LORES1.DAT~  CROSS_CH3CCL3=3CL+2CO2+2H2O__LORES1.DAT~  CROSS_CL2O2=2CLO_LORES1.DAT~  CROSS_CLNO3=CLNO3_LORES1.DAT~  CROSS_H2O2=2OH_LORES1.DAT~  CROSS_HNO3=NO2+OH_LORES1.DAT~  CROSS_HO2=OH+O_LORES1.DAT~  CROSS_NO2=NO2_LORES1.DAT~  CROSS_NO3=NO+O2_LORES1.DAT~  CROSS_NO3=NO2+O_LORES1.DAT~  CROSS_O3=O2+O_LORES1.txt  CROSS_O3=O3_LORES1.DAT~  CROSS_OCS=CO+S+M_LORES1.txt  CROSS_PAN=PAN_LORES1.DAT~
data/LEIDEN/: Co_0.1nm.txt
data/MPIUV/: CO2_HuestisBerkowitz2010_300K_0.1254-201.6nm.txt  COCl2_JPL-20102011_294-298K_168.10-305.36nm.txt  Cl2_JPL-20102011_298K_260-550nm.txt  ClO_JPL-20102011_298K_245-316nm.txt  H2O_Chan1993_298K_6.20-206.64nm.txt  H2SO4_Farahani2019_0K_118.09-341.44nmcalc.txt  H2SO4_Farahani2019_226.5K_119-248nm.txt  HCl_JPL-20102011_298K_135-230nm.txt  HOCl_JPL-20102011_298K_200-420nm.txt  N2_SouzaSrivastava1994_298K_25-226nm.txt  S2O2C1_Frandsen2020_0K_220.04-549.92nmcalc.txt  S2O2trigonal_Frandsen2020_0K_220.03-473.24nmcalc.txt  S3_Frandsen2020_0K_244.97-482.22nm.txt  S3_Frandsen2020_273K_250-445nm.txt  S4_BillmersSmith1991_723-843K_425-575nm.txt  SCl2_ColtonRabalais1974_298K_188-578nm.txt  SO2_Zhang2008_298K_195-219nm.txt  SO2_Zhang2008_298K_295-302nm.txt  SO2_Zhang2008_373K_195-219nm.txt  SO2_Zhang2008_373K_295-303nm.txt  SO2_Zhang2008_415K_195-219nm.txt  SO2_Zhang2008_415K_295-303nm.txt  SO3_JPL-20152015_298K_180-330nm.txt  SO_WhytePhillips1982_298K_199.4-231.0nm.txt
data/Unclassified/: H2O_Ranjan2020.txt  S3_BS91_Kr13.txt  S3_Kr87.txt  S4_BS91_Kr13.txt  S4_Sa80_Kr13.txt
data/VENOT2020/: README.rtf
data/__MACOSX/: ._VENOT2020
data/atmos/: venus.txt
data/cross/: CROSS_CH2FCL=CL+F+CO2_LORES1.DAT~  CROSS_CH3CCL3=3CL+PROD_LORES1.DAT~  CROSS_CH3CL=CL+CH3_LORES1.DAT~  CROSS_CHF2CL=CF2CL+H_LORES1.DAT~  CROSS_CO2=CO+O_LORES1.DAT~  CROSS_H2CO=H2CO_LORES1.DAT~  CROSS_NO3=NO3_LORES1.DAT~  CROSS_O3=O2+O_1D__LORES1.DAT~  CROSS_OCLO=CLO+O_LORES1.DAT~
data/network/: CNOH_reaction_network.yaml  Earth_Bhattacharya_test.c3m  Earth_CHNOS_Vulcan.c3m  Earth_CHNOS_Vulcan.yaml  Earth_test_full.yaml  H2Diffusion.yaml  JupiterIon23.yaml  JupiterNHIon23.yaml  MH81.c3m  MH81.yaml  VULCAN_CHNOS_thermo.c3m  VULCAN_CHNO_thermo.c3m  VULCAN_CHNO_thermo.txt  VULCAN_SCHNOfullPhoto.c3m  VULCAN_SCHNOfullPhoto.yaml  VenusBoxCOx.yaml  VenusMVP.yaml  VenusV1.yaml  VenusV2.yaml  Vulcan_CHNOS.yaml  bierson2020.c3m  chapman.yaml  chapmantest.txt  earth_HOx.txt  geh4_simplified.yaml  my_silane_v2.yaml  oxygen.yaml  venus_test.c3m  venus_test.yaml  vulcan2017.c3m  vulcan2017.txt  vulcanCHOnetwork.yaml  vulcan_Tsai2017.yaml  zhang2010.c3m  (+4 more)
equation/: photocross.py  rate_equation.py
examples/: CMakeLists.txt  kindata3master.inp  scheme.inp
old/: 1D_solver_old.cpp  BlockMatrix_test.cpp  BoxChemSolver.cpp  ChemSolver.cpp  IonSol2.cpp  Tridiagonal_test.cpp  Vulcan_CHO_thermo_network_1D.cpp  test_box_photochemistry.cpp  test_box_thermochemistry.cpp  test_cantera.cpp  test_equilibrium.cpp  test_equilibrium2.cpp  test_equilibrium3.cpp  test_oneD.cpp
results/: BiersonZhang2020.yaml  O2diss_log.txt  Venus_10.nc  Vulcan_CHO_v2.yaml  chapman.yaml  sun_spec.inp  zhang2012.yaml
src/: .atm_chemistry.cpp.swo  .atm_chemistry.cpp.swp  C3Minput.hpp  CMakeLists.txt  CustomRate.cpp  CustomRate.hpp  CustomTransport.cpp  CustomTransport.hpp  DiffusiveFlux.cpp  DiffusiveFlux.hpp  PhotoChemistry.cpp  PhotoChemistry.hpp  RadTran.cpp  RadTran.hpp  Vapors.cpp  Vapors.hpp  actinic_flux.cpp  actinic_flux.hpp  atm_chemistry.cpp  atm_chemistry.hpp  atm_chemistry_simulator.cpp  atm_chemistry_simulator.hpp  boundary.cpp  boundary.hpp  h2_diff.yaml  interpolation.cpp  interpolation.hpp  tridiagonal_solver.cpp  yaml.h
src/todo/: DiffusiveFlux.cpp  DiffusiveFlux.hpp
tests/: .JupChemProfile_AB.txt.swp  .VenusV2.yaml.swp  .check_photopeak.py.swp  .test_Earth_photochem.cpp.swp  .test_SOx_network.cpp.swp  .test_advection_diffusion.cpp.swp  .test_photolysis_box.cpp.swp  .zhang2010.yaml.swp  1DPP.cpp  1DPP_parallel.cpp  1D_solver_old.cpp  BoxChemSolver.cpp  BoxChemSolver_new.cpp  CMakeLists.txt  CNOH_reaction_network.yaml  ChapmanBoxTest.tmp  ChemSolver.cpp  ChemSolverImplicit.cpp  ChemSolver_MT.cpp  Diffusion_test.cpp  Earth.txt  EarthCHNOS.tmp  Earth_1d.tmp  Earth_CHNO.yaml  Earth_CHNOS.yaml  Earth_CHNOS_Vulcan.yaml  Earth_Eddy_Diffusion_Hu2012.csv  Earth_test.yaml  ISPhoto.cpp  ImplicitSolver.cpp  IonChemSolver.cpp  IonChemSolver_OMP.cpp  IonRatesJEDI001.cpp  IonRatesJEDI001.inp  IonRatesJEDI001.txt  IonRatesJEDI01.cpp  IonRatesJEDI01.inp  IonRatesJEDI01.txt  IonRatesJEDIonly.cpp  IonRatesJEDIonly.inp  (+93 more)
tests.sav/: chapman_test.inp  chapman_test.py  run_chapman.sh  vulcan.nc  vulcan.py  vulcan_test.inp
tools/: BoxChemGen.py  NetGenKINETICS.py  NetGenVULCAN.py  chapman.py  check_depth.py  check_photopeak.py  cira.py  config.py  integ.py  network.py  photo_cross_eq.py  plot_spec.py  test_photolysis.py  venus_test_plot.py  vulcan_Tsai2017.py
work-env/: pip-selfcheck.json
(+48 files in other folders)
